2010-02-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update to latest SL library changes.

	* benchmarks/blas/blasbench.h,
	* benchmarks/fft/fft-bench.c,
	* benchmarks/lib/benchmark.c,
	* benchmarks/livermore/kernel15.c,
	* benchmarks/livermore/kernel21.c,
	* benchmarks/livermore/kernel23.c,
	* benchmarks/livermore/kernel6.c,
	* benchmarks/livermore/kernel8.c,
	* benchmarks/livermore/ll-generate.py,
	* demo/10threads.c,
	* demo/Makefile.am,
	* demo/answer.c,
	* demo/bitblt.c,
	* demo/env.c,
	* demo/fibonacci.c,
	* demo/fibre.c,
	* demo/helloworld.c,
	* demo/keyblit.c,
	* demo/roman.c,
	* demo/sep.c: Change header names and use `assert' and `printf'
	properly.

2010-02-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend `fibre' demo to test Fibre syntax more.

	* demo/fibre.c.d3: Check handling of '][' in input.

2010-01-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.

	* demo/Makefile.am: Add missing `\'.

2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reflect latest updates to SL standard library.

	* benchmarks/blas/blasbench.h,
	* benchmarks/fft/fft-bench.c,
	* benchmarks/lib/benchmark.c,
	* benchmarks/livermore/ll-generate.py,
	* benchmarks/mandel/mandel.c,
	* demo/env.c: Use new header names.

2010-01-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New `env' demo for environment variables.

	* demo/env.c: New.

	* demo/Makefile.am: Update accordingly.

2010-01-20  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in LKM9.

	* benchmarks/livermore/kernel9.c (innerk9): Fix array offset
	computation.

2010-01-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Improve the `perf' demo.

	* demo/perf.c: Also show the intervals API.

2010-01-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor packaging fix.
	
	* build-aux/benchmarks.mk (.c.tar): Avoid bundling files only
	useful for "make bench" to Unibench.

2009-12-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* NEWS: Initialize for 2.2.x.

2009-12-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>
