@@ -1,0 +1,1 @@
+3.14 -0.1414e1 [0,2: .5 -.5]
